src/test/deca/context/valid/non_provided/selection.deca
// Description:
//    vérification que le 'x' utilisé après le 'this'
//    est bien celui de la classe A et idem pour le 
//    return de 'getX'
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 21/01/2020

// Un exemple de programme Deca

class A {
   protected int x ;
   int getX() {
      return x ;
   }
   void setX(int x) {
      this.x = x ;
   }
}